--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset= "utf-8" />
-    <title>Globe Sim</title>
+    <title>Lowrez Island</title>
     <script type= "text/javascript" src= "phaser.min.js" ></script>
     <script type= "text/javascript" src= "main.js" ></script>
     <style>
