--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <script type= "text/javascript" src= "phaser.min.js" ></script>
     <script type= "text/javascript" src= "main.js" ></script>
     <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #666;
+      }
       canvas {
+        margin: 50px auto;
+        border: 6px solid #444;
         image-rendering: optimizeSpeed;
         image-rendering: pixelated;
         image-rendering: -moz-crisp-edges;
